04_Teste/exercicios_gerados/question_mdp_37_nova_linha/version_3/full_program_output.txt
Traceback (most recent call last):
  File "<string>", line 5
    t = 79 + 41 +
                ^
SyntaxError: invalid syntax